[gd_scene load_steps=19 format=2]

[ext_resource path="res://component.gd" type="Script" id=1]
[ext_resource path="res://Components/radar.png" type="Texture" id=2]
[ext_resource path="res://Components/engineblast.png" type="Texture" id=3]
[ext_resource path="res://Shots/flash.png" type="Texture" id=4]
[ext_resource path="res://Shots/rlasershot.png" type="Texture" id=5]
[ext_resource path="res://red_laser.gd" type="Script" id=6]
[ext_resource path="res://radar.gd" type="Script" id=7]
[ext_resource path="res://Shots/radarpulse.png" type="Texture" id=8]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.237705, 0.606557, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.854902, 0.854902, 0.854902, 0.580392, 0.698039, 0.698039, 0.698039, 0.184314, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 90.0
angle_random = 1.0
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.027451 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]
min_value = 0.99
max_value = 10.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 10 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 5 )
hue_variation_curve = SubResource( 7 )

[node name="component" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 11.681
margin_top = -12.4491
margin_right = 36.681
margin_bottom = 13.5509
rect_rotation = 90.0
text = "0"
align = 1
valign = 1

[node name="blast" type="Sprite" parent="."]
visible = false
position = Vector2( -4, 0 )
scale = Vector2( 0.2, 0.2 )
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( -30, 0 )

[node name="flash" type="Particles2D" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 4 )

[node name="red_laser" type="Sprite" parent="."]
visible = false
position = Vector2( -3.45909, -0.244171 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( 0, -62.5 )
script = ExtResource( 6 )

[node name="red_ray" type="RayCast2D" parent="red_laser"]
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
max_distance = 5000.0

[node name="friendly_check" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 2000, 0 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="radar" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="pulse" type="Particles2D" parent="radar"]
scale = Vector2( 0.2, 0.2 )
amount = 5
lifetime = 5.0
process_material = SubResource( 10 )
texture = ExtResource( 8 )

[node name="scan" type="RayCast2D" parent="radar"]
enabled = true
cast_to = Vector2( 20000, 0 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false
